Table user {
  id integer [primary key]
  username text [unique, not null]
  email text [not null, unique]
  password text [not null]
  is_admin boolean [default: false] 
  created_at datatime
  update_at datatime
}

Table record {
  id integer [primary key]
  user_id integer [not null]
  type enum [not null]
  title text [not null]
  description text [not null]
  status enum [default: 'pending']
  latitude float [null]
  created_at datatime
  updated_at datetime
}

Table image{
  id integer [primary key]
  record_id integer [not null]
  image_url text [not null]
  created_at datetime
}

Table video{
  id integer [primary key]
  record_id integer [not null]
  video_url text [not null]
  created_at datetime
}





Ref records:user.id> record.user_id

Ref images:record.id> image.record_id

Ref videos: record.id> video.record_id